# dir_fdw

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.12.19-alpine3.19  Dockerfile.13.15-alpine3.19  Dockerfile.14.12-alpine3.19  Dockerfile.15.7-alpine3.19  Dockerfile.16.3-alpine3.19  Dockerfile.template  LICENSE  README.md  build-dockerfile.sh  build-img.sh  d_begin.h  d_end.h  d_explain.h  d_handler.h  d_iterate.h  d_options.h  d_path.h  d_plan.h  d_relsize.h  d_rescan.h  d_state.h  d_type.h  d_validator.h  dir_fdw--1.0.sql  dir_fdw.c  dir_fdw.control  dir_fdw.test.sql
